searchbar alignment fixes

--- a/src/style.sass
+++ b/src/style.sass
@@ -7,15 +7,11 @@
     right: 6px
   font-size: 1em
   vertical-align: baseline
-  &.error
-    img
-      opacity: 0
   svg
     transform: translateZ(0)
 .favicon
-  &, img
-    width: 16px
-    height: 16px
+  width: 16px
+  height: 16px
 
 
 .input
